get banners func
