# config/config.go
@@ -7,8 +7,8 @@ var PathDocs = BasePath + "/docs"
 var PathFillDB = BasePath + "/filldb"
 var PathGetUsers = BasePath + "/users"
 var PathUserBanner = BasePath + "/user_banner"
-var PathCreateBanner = BasePath + "/banner"
-var PathUpdateBanner = BasePath + "/banner/{id}"
+var PathBanner = BasePath + "/banner"
+var PathBannerID = BasePath + "/banner/{id}"
 
 var Headers = map[string]string{
 	"Access-Control-Allow-Credentials": "true",
