# domain/model/model.go
@@ -1,5 +1,7 @@
 package model
 
+import "time"
+
 type Error struct {
 	Error interface{} `json:"error,omitempty"`
 }
@@ -25,4 +27,14 @@ type CreateBanner struct {
 	FeatureId int        `json:"feature_id"`
 	Content   UserBanner `json:"content"`
 	IsActive  bool       `json:"is_active"`
+}
+
+type Banner struct {
+	Id        int        `json:"banner_id"`
+	Tag_ids   []int      `json:"tag_ids"`
+	FeatureId int        `json:"feature_id"`
+	Content   UserBanner `json:"content"`
+	IsActive  bool       `json:"is_active"`
+	CreatedAt time.Time  `json:"created_at"`
+	UpdatedAt time.Time  `json:"updated_at"`
 }
