# usecase/usecase.go
@@ -8,8 +8,10 @@ import (
 
 type UsecaseInterface interface {
 	GetUserBanner(tagId int, featureId int, useLastVers bool) (*model.UserBanner, error)
+	GetBanners(tagId int, featureId int, limit int, offset int) ([]model.Banner, error)
 	CreateBanner(req model.CreateBanner) error
 	UpdateBanner(id int, req model.CreateBanner) error
+	DeleteBanner(id int) error
 	FillDB(tagCount int, featureCount int, bannerCount int) error
 	GetUsers() ([]model.User, error)
 }
@@ -27,11 +29,17 @@ func NewUsecase(s rep.StoreInterface) UsecaseInterface {
 func (uc *Usecase) GetUserBanner(tagId int, featureId int, useLastVers bool) (*model.UserBanner, error) {
 	return uc.store.GetUserBannerDB(tagId, featureId)
 }
+func (uc *Usecase) GetBanners(tagId int, featureId int, limit int, offset int) ([]model.Banner, error) {
+	return uc.store.GetBannersDB(tagId, featureId, limit, offset)
+}
 func (uc *Usecase) CreateBanner(req model.CreateBanner) error {
 	return uc.store.CreateBannerDB(req)
 }
 func (uc *Usecase) UpdateBanner(id int, req model.CreateBanner) error {
 	return uc.store.UpdateBannerDB(id, req)
+}
+func (uc *Usecase) DeleteBanner(id int) error {
+	return uc.store.DeleteBannerDB(id)
 }
 
 func (uc *Usecase) FillDB(tagCount int, featureCount int, bannerCount int) error {
